tests/files/lexer_tests/should_fail/028.cmdr
// Illegal character in string (ascii 28)
var = '';